discussion/kv_engine/183251/183251_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54516: Support flush of a ModifyCollection system event

With flushing we can now test backfill

Change-Id: I523a4a0ea2c2b3de70d7f6cc621936495a6f8cb1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-25 10:09:59.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-11-25 10:10:29.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/326400/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-25 10:52:42.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/566/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:4308:16: error: no member named "producerFlatbufferSystemEventsEnabled" in "CollectionsDcpTestProducers"; did you mean "producerFlatBuffersSystemEventsEnabled"? [clang-diagnostic-error]
    producers->producerFlatbufferSystemEventsEnabled = false;
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
               producerFlatBuffersSystemEventsEnabled
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/collections/collections_dcp_producers.h:90:10: note: "producerFlatBuffersSystemEventsEnabled" declared here
    bool producerFlatBuffersSystemEventsEnabled = true;
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/566/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/collections/evp_store_collections_dcp_test.cc:4308:16:
error: no member named "producerFlatbufferSystemEventsEnabled" in "CollectionsDcpTestProducers"; did you mean "producerFlatBuffersSystemEventsEnabled"? [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/566/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/546/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/546/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/720/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/dcp/active_stream.cc(1345): error C2065: "flatbufferSystemEventsEnabled": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/720/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/558/ : FAILURE

Compile error at [2022-11-25T10:51:41.270Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/558/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/585/ : FAILURE

Compile error at [2022-11-25T10:50:02.342Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/585/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/584/ : FAILURE

Compile error at [2022-11-25T10:49:55.778Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: ?flatbufferSystemEventsEnabled? was not declared in this scope; did you mean ?flatBuffersSystemEventsEnabled??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/584/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/821/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/821/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/575/ : FAILURE

Compile error at [2022-11-25T10:49:15.406Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: use of undeclared identifier "flatbufferSystemEventsEnabled"; did you mean "flatBuffersSystemEventsEnabled"?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/575/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/575/ : FAILURE

Compile error at [2022-11-25T10:27:16.887Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: ?flatbufferSystemEventsEnabled? was not declared in this scope; did you mean ?flatBuffersSystemEventsEnabled??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/575/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/564/ : FAILURE

Compile error at [2022-11-25T10:31:15.157Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/dcp/active_stream.cc:1345:20:
error: ?flatbufferSystemEventsEnabled? was not declared in this scope; did you mean ?flatBuffersSystemEventsEnabled??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/564/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21401/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
